# aoc

./: Cargo.toml  README.md
2022/: Cargo.toml  README.md
2022/src/: d01.rs  d02.rs  d04.rs  d05.rs  d06.rs  d06_2.rs  d07.rs  d08_2.rs  d09.rs  d11.rs  d11_2.rs  d12.rs  d12_2.rs  d13_2.rs  d14.rs  d15_2.rs  d16.rs  d16_2.rs  d20.rs
2023/: aoc_utils.lua  d01_1.lua  d01_2.lua  d02_1.lua  d02_2.lua  d03_1.lua  d03_2.lua
2024/: .gitignore  build.zig
2024/inputs/: d02_example  d04_reference  d06_reference  d11
2024/src/d01/: d01.zig
2024/src/d02/: d02.zig
2024/src/d03/: d03.zig
2024/src/d04/: d04.zig
2024/src/d05/: d05.zig
2024/src/d06/: d06.zig
2024/src/d07/: d07.zig  d07_comptime.zig
2024/src/d08/: d08.zig
2024/src/d09/: d09.zig
2024/src/d10/: d10.zig
2024/src/d11/: d11.zig
2024/src/d12/: d12.zig
2024/src/d13/: d13.zig
2025/src/: d01.exs
inputs/: d16_test
src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d06_2.rs  d07.rs  d07_2.rs  d08.rs  d08_2.rs  d09.rs  d09_2.rs  d10.rs  d10_2.rs  d11.rs  d11_2.rs  d12.rs  d12_2.rs  d13.rs  d13_2.rs  d14.rs  d14_2.rs  d15.rs  d16.rs  d16_2_multithreaded.rs  d17.rs  d17_2.rs  d18.rs  d18_2.rs  d19.rs  d19_2.rs
