[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="d01"
path = "src/d01.rs"

[[bin]]
name="d02"
path = "src/d02.rs"

[[bin]]
name="d03"
path = "src/d03.rs"

[[bin]]
name="d04"
path = "src/d04.rs"

[[bin]]
name="d05"
path = "src/d05.rs"

[dependencies]
