[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="d01"
path = "src/d01.rs"

[[bin]]
name="d02"
path = "src/d02.rs"

[[bin]]
name="d03"
path = "src/d03.rs"

[[bin]]
name="d04"
path = "src/d04.rs"

[[bin]]
name="d05"
path = "src/d05.rs"

[[bin]]
name="d06"
path = "src/d06.rs"

[[bin]]
name="d06_2"
path = "src/d06_2.rs"

[[bin]]
name="d07"
path = "src/d07.rs"

[[bin]]
name="d07_2"
path = "src/d07_2.rs"

[[bin]]
name="d08"
path = "src/d08.rs"

[[bin]]
name="d08_2"
path = "src/d08_2.rs"

[[bin]]
name="d09"
path = "src/d09.rs"

[[bin]]
name="d09_2"
path = "src/d09_2.rs"

[[bin]]
name="d10"
path = "src/d10.rs"

[[bin]]
name="d10_2"
path = "src/d10_2.rs"

[[bin]]
name="d11"
path = "src/d11.rs"

[[bin]]
name="d11_2"
path = "src/d11_2.rs"

[[bin]]
name="d12"
path = "src/d12.rs"

[[bin]]
name="d12_2"
path = "src/d12_2.rs"

[[bin]]
name="d13"
path = "src/d13.rs"

[[bin]]
name="d13_2"
path = "src/d13_2.rs"

[[bin]]
name="d14"
path = "src/d14.rs"

[[bin]]
name="d14_2"
path = "src/d14_2.rs"

[[bin]]
name="d15"
path = "src/d15.rs"

[[bin]]
name="d15_2"
path = "src/d15_2.rs"

[[bin]]
name="d16"
path = "src/d16.rs"

[[bin]]
name="d16_2"
path = "src/d16_2.rs"

[dependencies]
